--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="eng">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" width="device-width", initial scale="1.0">
+        <title>Bird Watching</title>
+    </head> 
+      <body>
+        <header>
+            <h1>Bird Watching</h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#home">Home</a>
+                        <a href="#getstarted">Get Started</a>
+                        <a href="#photos">Photos</a>
+                        <a href="#gear">Gear</a>
+                        <a href="#forum">Forum</a>
+                    </li>
+                </ul>
+            </nav>
 
+        </header>
+        
+        <main>
+
+        </main>
+
+        <footer>
+
+        </footer>
+
+      </body>
+</html>
