--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" width="device-width", initial scale="1.0">
         <title>Bird Watching</title>
+        <link href="style.css" rel="stylesheet">
     </head> 
+
       <body>
         <header>
             <h1>Bird Watching</h1>
+            <img src="" alt="a simple dove logo">
+            
             <nav>
                 <ul>
                     <li>
