--- a/index.html
+++ b/index.html
@@ -1,38 +1,39 @@
 <!DOCTYPE html>
-<html lang="eng">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" width="device-width", initial scale="1.0">
-        <title>Bird Watching</title>
-        <link href="style.css" rel="stylesheet">
-    </head> 
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Bird watching</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300%7CCinzel+Decorative:700" rel="stylesheet">
+</head>
 
-      <body>
-        <header>
-            <h1>Bird Watching</h1>
-            <img src="" alt="a simple dove logo">
-            
-            <nav>
-                <ul>
-                    <li>
-                        <a href="#home">Home</a>
-                        <a href="#getstarted">Get Started</a>
-                        <a href="#photos">Photos</a>
-                        <a href="#gear">Gear</a>
-                        <a href="#forum">Forum</a>
-                    </li>
-                </ul>
-            </nav>
+<body>
 
-        </header>
-        
-        <main>
+      <h1>Birdwatching</h1>
+      <img src="dove.png" alt="a simple dove logo">
 
-        </main>
 
-        <footer>
+      <ul>
+        <li><span>Home</span></li>
+        <li><a href="#">Get started</a></li>
+        <li><a href="#">Photos</a></li>
+        <li><a href="#">Gear</a></li>
+        <li><a href="#">Forum</a></li>
+      </ul>
 
-        </footer>
+        <h2>Welcome</h2>
+        <p>Welcome to our fake birdwatching site. If this were a real site, it would be the ideal place to come to learn more about birdwatching, whether you are a beginner looking to learn how to get into birding, or an expert wanting to share ideas, tips, and photos with other like-minded people.</p>
+        <p>So don't waste time! Get what you need, then turn off that computer and get out into the great outdoors!</p>
 
-      </body>
+      <h2>Favourite photos</h2>
+
+      <a href="favorite-1.jpg"><img src="favorite-1_th.jpg" alt="Small black bird"></a>
+      <a href="favorite-2.jpg"><img src="favorite-2_th.jpg" alt="Top half of a pretty bird"></a>
+      <a href="favorite-3.jpg"><img src="favorite-3_th.jpg" alt="Top half of a large bird"></a>
+      <a href="favorite-4.jpg"><img src="favorite-4_th.jpg" alt="Large bird"></a>
+
+        <p>This fake website example is CC0 — any part of this code may be reused in any way you wish. Original example written by Chris Mills, 2016.</p>
+
+      <p><a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
+
+  </body>
 </html>
