--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width:device-width", initial scale="1.0">
     <title>Bird watching</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300%7CCinzel+Decorative:700" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
