--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       </nav>
       </header>
     <main>
-        <article>
+        <section>
         <h2>Welcome</h2>
         <p>Welcome to our fake birdwatching site. If this were a real site, it would be the ideal place to come to learn more about birdwatching, whether you are a beginner looking to learn how to get into birding, or an expert wanting to share ideas, tips, and photos with other like-minded people.</p>
         <p>So don't waste time! Get what you need, then turn off that computer and get out into the great outdoors!</p>
-        </article>
+        </section>
         
         <aside>
       <h2>Favorite Photos</h2>
@@ -43,5 +43,6 @@
 
       <p><a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
         </footer>
+        
   </body>
 </html>
