--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <aside>
       <h2>Favorite Photos</h2>
 
-      <a href="favorite-1.jpg"><img src="favorite-1_th.jpg" alt="Small black bird"></a>
-      <a href="favorite-2.jpg"><img src="favorite-2_th.jpg" alt="Top half of a pretty bird"></a>
+      <img src="/images/dove.png" alt="Small black bird">
+      <img src="favorite-2_th.jpg" alt="Top half of a pretty bird">
       <a href="favorite-3.jpg"><img src="favorite-3_th.jpg" alt="Top half of a large bird"></a>
       <a href="favorite-4.jpg"><img src="favorite-4_th.jpg" alt="Large bird"></a>
         </aside>
