--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width:device-width", initial scale="1.0">
-    <title>Bird watching</title>
+    <title>Birdwatching</title>
     <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
     <header>
     <h1>Birdwatching</h1>
-      <img src="file:///C:/Users/Brad/Downloads/assets/assets/dove.png" alt="a simple dove logo">
+      <img src="/images/dove.png" alt="a simple dove logo">
     
       <nav>
       <ul>
@@ -32,10 +32,9 @@
         <aside>
       <h2>Favorite Photos</h2>
 
-      <img src="/images/dove.png" alt="Small black bird">
-      <img src="favorite-2_th.jpg" alt="Top half of a pretty bird">
-      <a href="favorite-3.jpg"><img src="favorite-3_th.jpg" alt="Top half of a large bird"></a>
-      <a href="favorite-4.jpg"><img src="favorite-4_th.jpg" alt="Large bird"></a>
+      <img src="/images/favorite-2.jpg" alt="Top half of a pretty bird">
+      <img src="/images/favorite-3.jpg" alt="Top half of a large bird">
+      <img src="/images/favorite-4.jpg" alt="Large bird">
         </aside>
 
         <footer>
