--- a/index.html
+++ b/index.html
@@ -23,19 +23,20 @@
       </nav>
       </header>
     <main>
-        <section>
+        <article>
         <h2>Welcome</h2>
         <p>Welcome to our fake birdwatching site. If this were a real site, it would be the ideal place to come to learn more about birdwatching, whether you are a beginner looking to learn how to get into birding, or an expert wanting to share ideas, tips, and photos with other like-minded people.</p>
         <p>So don't waste time! Get what you need, then turn off that computer and get out into the great outdoors!</p>
-        </section>
+        </article>
         
         <aside>
       <h2>Favorite Photos</h2>
-
+      <img src="/images/favorite-1.jpg" alt="Small black bird">
       <img src="/images/favorite-2.jpg" alt="Top half of a pretty bird">
       <img src="/images/favorite-3.jpg" alt="Top half of a large bird">
       <img src="/images/favorite-4.jpg" alt="Large bird">
         </aside>
+        </main>
 
         <footer>
         <p>This fake website example is CC0 — any part of this code may be reused in any way you wish. Original example written by Chris Mills, 2016.</p>
